--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "proxy server for reservation module",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon server.js"
   },
   "repository": {
     "type": "git",
@@ -21,7 +22,9 @@
     "morgan": "^1.9.1",
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
-    "react-router-dom": "^4.3.1"
+    "react-router-dom": "^4.3.1",
+    "express-http-proxy": "^1.5.0"
+
   },
   "devDependencies": {
     "@babel/core": "^7.1.2",
@@ -30,6 +33,15 @@
     "babel-core": "^6.26.3",
     "babel-loader": "^8.0.4",
     "webpack": "^4.25.1",
-    "webpack-cli": "^3.1.2"
+    "webpack-cli": "^3.1.2",
+    "body-parser": "^1.18.3",
+    "cors": "^2.8.5",
+    "css-loader": "^1.0.1",
+    "express": "^4.16.4",
+    "http-proxy-middleware": "^0.19.0",
+    "nginx": "0.0.0",
+    "nodemon": "^1.18.5",
+    "path": "^0.12.7",
+    "style-loader": "^0.23.1"
   }
 }
